Fix boolean properties, and punch up tests.
Review at http://gwt-code-reviews.appspot.com/755802

Review by: cromwellian@google.com

git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@8649 8db76d5a-ed1c-0410-87a9-c151d255dfc7